add youtube domains

--- a/lunin_1.conf
+++ b/lunin_1.conf
@@ -440,9 +440,6 @@ DOMAIN-SUFFIX,whatbrowser.org,DIRECT
 DOMAIN-SUFFIX,widevine.com,DIRECT
 DOMAIN-SUFFIX,x.company,DIRECT
 DOMAIN-SUFFIX,xn--ngstr-lra8j.com,DIRECT
-DOMAIN-SUFFIX,youtu.be,DIRECT
-DOMAIN-SUFFIX,yt.be,DIRECT
-DOMAIN-SUFFIX,ytimg.com,DIRECT
 # Clubhouse
 DOMAIN-SUFFIX,clubhouseapi.com,PROXY
 DOMAIN-SUFFIX,clubhouse.pubnub.com,PROXY
@@ -452,6 +449,10 @@ DOMAIN-SUFFIX,ap3.agora.io,PROXY
 DOMAIN-KEYWORD,aka,PROXY
 DOMAIN-KEYWORD,facebook,PROXY
 DOMAIN-KEYWORD,youtube,PROXY
+DOMAIN-SUFFIX,youtu.be,PROXY
+DOMAIN-SUFFIX,googlevideo.com,PROXY
+DOMAIN-SUFFIX,ytimg.com,PROXY
+DOMAIN-SUFFIX,yt.be,PROXY
 DOMAIN-KEYWORD,twitter,PROXY
 DOMAIN-KEYWORD,instagram,PROXY
 DOMAIN-KEYWORD,gmail,PROXY
