more yt suffixes

--- a/lunin_1.conf
+++ b/lunin_1.conf
@@ -449,10 +449,26 @@ DOMAIN-SUFFIX,ap3.agora.io,PROXY
 DOMAIN-KEYWORD,aka,PROXY
 DOMAIN-KEYWORD,facebook,PROXY
 DOMAIN-KEYWORD,youtube,PROXY
-DOMAIN-SUFFIX,youtu.be,PROXY
 DOMAIN-SUFFIX,googlevideo.com,PROXY
 DOMAIN-SUFFIX,ytimg.com,PROXY
 DOMAIN-SUFFIX,yt.be,PROXY
+DOMAIN-SUFFIX,youtu.be,PROXY
+DOMAIN-SUFFIX,gvt1.com,PROXY
+DOMAIN-SUFFIX,gstatic.com,PROXY
+DOMAIN-SUFFIX,youtube.com,PROXY
+DOMAIN-SUFFIX,nhacmp3youtube.com,PROXY
+DOMAIN-SUFFIX,youtube-nocookie.com,PROXY
+DOMAIN-SUFFIX,aaplimg.com,PROXY
+DOMAIN-SUFFIX,ytimg.com,PROXY
+DOMAIN-SUFFIX,youtubeeducation.com,PROXY
+DOMAIN-SUFFIX,youtubekids.com,PROXY
+DOMAIN-SUFFIX,googleapis.com,PROXY
+DOMAIN-SUFFIX,ggpht.com,PROXY
+DOMAIN-SUFFIX,googleusercontent.com,PROXY
+DOMAIN-SUFFIX,1e100.net,PROXY
+DOMAIN-SUFFIX,doubleclick.net,PROXY
+DOMAIN-SUFFIX,mdns.mcast.net,PROXY
+DOMAIN-SUFFIX,youtube.ru, PROXY
 DOMAIN-KEYWORD,twitter,PROXY
 DOMAIN-KEYWORD,instagram,PROXY
 DOMAIN-KEYWORD,gmail,PROXY
