--- a/lunin_1.conf
+++ b/lunin_1.conf
@@ -388,7 +388,9 @@ DOMAIN-SUFFIX,line-scdn.net,PROXY
 USER-AGENT,Line*,PROXY
 # Google
 DOMAIN-KEYWORD,blogspot,DIRECT
-DOMAIN-KEYWORD,google,DIRECT
+DOMAIN-SUFFIX,google.ru,DIRECT
+DOMAIN-SUFFIX,google.com,DIRECT
+DOMAIN-SUFFIX,google.de,DIRECT
 DOMAIN-SUFFIX,abc.xyz,DIRECT
 DOMAIN-SUFFIX,admin.recaptcha.net,DIRECT
 DOMAIN-SUFFIX,ampproject.org,DIRECT
