--- a/.github/workflows/generate_conf.yaml
+++ b/.github/workflows/generate_conf.yaml
@@ -51,4 +51,4 @@ jobs:
       run: |
         curl -s -X POST "https://api.telegram.org/bot$TG_BOT_TOKEN/sendMessage" \
           -d "chat_id=$CHAT_ID" \
-          -d "text="Конфигурация для Shadowrocket обновлена:\n```\n${{ env.git_diff }}```\n\nПожалуйста нажмите пункт Update."
+          -d "text="Конфигурация для Shadowrocket обновлена:\n```\n${{ steps.commit_step.outputs.git_diff }}```\n\nПожалуйста нажмите пункт Update."
