fixed multiline output

--- a/.github/workflows/generate_conf.yaml
+++ b/.github/workflows/generate_conf.yaml
@@ -40,7 +40,12 @@ jobs:
         git add "$CONFIG_NAME"
         git commit -m "Update generated file"
         git push https://$GH_TOKEN@github.com/lrlunin/shadowrocket-config.git
-        echo "git_diff=$(git diff HEAD^ HEAD)" >> $GITHUB_ENV
+        {
+          echo 'git_diff<<EOF'
+          git diff HEAD^ HEAD -U0 | grep '^[+-]' | grep -Ev '^(--- a/|\+\+\+ b/)'
+          echo EOF
+        } >> $GITHUB_ENV
+
     - name: Report to the telegram group
       env:
         TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
@@ -48,4 +53,4 @@ jobs:
       run: |
         curl -s -X POST "https://api.telegram.org/bot$TG_BOT_TOKEN/sendMessage" \
           -d "chat_id=$CHAT_ID" \
-          -d "text="Конфигурация для Shadowrocket обновлена:\n```\n${{ steps.commit_step.outputs.git_diff }}```\n\nПожалуйста нажмите пункт Update."
+          -d "text="Конфигурация для `lunin_2.conf` в Shadowrocket обновлена:\n```\n${{ steps.commit_step.outputs.git_diff }}```\n\nПожалуйста нажмите пункт Update."
