--- a/.github/workflows/generate_conf.yaml
+++ b/.github/workflows/generate_conf.yaml
@@ -51,5 +51,5 @@ jobs:
       run: |
         curl -s -X POST "https://api.telegram.org/bot$TG_BOT_TOKEN/sendMessage" \
           -d "chat_id=$CHAT_ID" \
-          -d "text=Конфигурация для <code>lunin_2.conf</code> в Shadowrocket обновлена. Изменения:%0A%0A<pre>$GIT_DIFF</pre>%0A%0AПожалуйста выберите пункт <code>Update</code> для этого конфигурационного файла." \
+          -d "text=Конфигурация для <code>lunin_2.conf</code> в Shadowrocket обновлена.%0A%0AИзменения:%0A%0A<pre>$GIT_DIFF</pre>%0A%0AПожалуйста выберите пункт <code>Update</code> для этого конфигурационного файла." \
           -d "parse_mode=html"
